Fixed some spacing issues in CSS

--- a/src/Services/Services.css
+++ b/src/Services/Services.css
@@ -10,7 +10,7 @@
     justify-content: space-around;
     align-items: center;
     margin: 0 auto;
-    max-width: 1200px;
+    width:80vw;
     padding: 10px 20px;
     box-sizing: border-box;
     margin-top: 15px;
@@ -24,16 +24,17 @@
     background-color: rgba(0,0,0,0.7);
     border: solid 1px rgb(254,197,1);
     border-radius:10px;
-    box-sizing:border-box;
-    display:inline-block;
+    display:flex;
     flex-direction:column;
     margin:0px auto;
     align-self:flex-start;
+    width:80vw;
+    padding:10px 20px;
 }
 
 p {
     font-size: 1rem;
     margin: 0 auto;
     padding: 0;
-    max-width:50%;
+    width:100%;
 }
